<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="afterDescendants"
    android:scrollbars="vertical" > -->

    <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget32"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_res"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_res"
                style="@style/ItemTextStyle"
                android:text="@string/source" />

            <Spinner
                android:id="@+id/spinner_res"
                style="@style/ItemSpinnerStyle" />

            <ImageView
                android:id="@+id/add_res"
                style="@style/ItemAddStyle"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" >

            <TextView
                android:id="@+id/tv_use"
                style="@style/ItemTextStyle"
                android:text="@string/use" />

            <Spinner
                android:id="@+id/spinner_use"
                style="@style/ItemSpinnerStyle" />

            <ImageView
                android:id="@+id/add_use"
                style="@style/ItemAddStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" >

            <TextView
                android:id="@+id/tv_number"
                style="@style/ItemTextStyle"
                android:text="@string/tv_number" />

            <EditText
                android:id="@+id/edit_number"
                style="@style/Edit_NewItemTheme"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" >

            <TextView
                android:id="@+id/tv_note"
                style="@style/ItemTextStyle"
                android:text="@string/note" />

            <EditText
                android:id="@+id/edit_note"
                style="@style/Edit_NewItemTheme"
                android:inputType="text" />
        </LinearLayout>

        <include
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            layout="@layout/time_layout"
            android:paddingBottom="5dp" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_border"
            android:gravity="center"
            android:onClick="onStartClick"
            android:text="@string/ok"
            android:textColor="@color/title_back"
            android:textSize="20sp" />
    </LinearLayout>

