
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >
  <!--  
     <include android:layout_width="match_parent" android:layout_height="50dp" layout="@layout/title_query"/>
     -->
     <LinearLayout  
       android:id="@+id/linearLayout1"  
       android:layout_width="fill_parent"  
       android:layout_height="40.0dip"  
       android:background="#FFFFFF" >  
  
       <TextView  
           android:id="@+id/text_in"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/title_in"  
           android:textColor="@color/title_back"  
           android:textSize="20.0dip" />  
  
       <TextView  
           android:id="@+id/text_all"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/title_all"  
           android:textColor="@color/title_back"  
           android:textSize="20.0dip" />  
  
       <TextView  
           android:id="@+id/text_out"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/title_out"  
           android:textColor="@color/title_back"  
           android:textSize="20.0dip" />  
   </LinearLayout>  
  
   <ImageView  
       android:id="@+id/cursor"  
       android:layout_width="fill_parent"  
       android:layout_height="wrap_content"  
       android:scaleType="matrix"  
       android:src="@drawable/a" />  
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:flipInterval="30"
        android:layout_weight="1.0"
        android:persistentDrawingCache="animation" />
    

</LinearLayout>